<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LancCaixaActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/data"
            android:inputType="date" />

        <RadioGroup
            android:layout_width="320dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdb_entrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Entrada"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rdb_saida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Saída"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RadioGroup>

        <EditText
            android:id="@+id/edt_doc"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Documento"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/conta"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_historico"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Histórico"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/edt_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSalvar"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>